force-app/main/default/objects/Test1__c/fields/deliveredAt__c.field-meta.xml
<CustomField>
    <fullName>deliveredAt__c</fullName>
    <label>deliveredAt</label>
    <type>DateTime</type>
</CustomField>