force-app/main/default/objects/Test1__c/fields/msgId__c.field-meta.xml
<CustomField>
    <fullName>msgId__c</fullName>
    <label>msgId</label>
    <length>28</length>
    <type>Text</type>
</CustomField>