force-app/main/default/objects/Test1__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>12</length>
    <type>Text</type>
</CustomField>