force-app/main/default/objects/Test1__c/fields/readAt__c.field-meta.xml
<CustomField>
    <fullName>readAt__c</fullName>
    <label>readAt</label>
    <type>DateTime</type>
</CustomField>