force-app/main/default/objects/Test1__c/fields/scheduledAt__c.field-meta.xml
<CustomField>
    <fullName>scheduledAt__c</fullName>
    <label>scheduledAt</label>
    <type>DateTime</type>
</CustomField>