force-app/main/default/objects/Test1__c/fields/sentAt__c.field-meta.xml
<CustomField>
    <fullName>sentAt__c</fullName>
    <label>sentAt</label>
    <type>DateTime</type>
</CustomField>