force-app/main/default/objects/Test1__c/fields/statusTimestamp__c.field-meta.xml
<CustomField>
    <fullName>statusTimestamp__c</fullName>
    <label>statusTimestamp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>