force-app/main/default/objects/Test1__c/fields/templateId__c.field-meta.xml
<CustomField>
    <fullName>templateId__c</fullName>
    <label>templateId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>